# datasketches-cpp

./: CMakeLists.txt
frequent_directions/: CMakeLists.txt
frequent_directions/include/: frequent_directions_sketch.hpp  frequent_directions_sketch_impl.hpp
frequent_directions/test/: CMakeLists.txt  frequent_directions_sketch_test.cpp
